fix: Fix theme custent is too large

--- a/components/common/theme-customization/index.module.css
+++ b/components/common/theme-customization/index.module.css
@@ -1,5 +1,6 @@
 .content {
   padding: 42px 60px;
+  max-width: 776px;
 }
 
 .header{
